Mitigate CVE-2024-37891 by setting `urllib3>=2.2.2`
Also, set up a task that uses `pipdeptree` to facilitate vulnerability checking in the future.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,11 @@
   "version": "2.0.0",
   "inputs": [
     {
+      "id": "dependency",
+      "type": "promptString",
+      "description": "Show tree of packages requesting this dependency."
+    },
+    {
       "id": "templateOptions",
       "description": "Template options.",
       "type": "pickString",
