--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
     "sphinxcontrib-bibtex==2.6.2",
     "sphinxcontrib-mermaid==0.9.2",
     "sphinxcontrib-towncrier==0.4.0a0",
+    # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
+    # ? via sphinx
+    "urllib3>=2.2.2",
 ]
 
 [tool.fawltydeps]
@@ -51,6 +54,9 @@ ignore_unused = [
     "sphinxcontrib-bibtex",
     "sphinxcontrib-mermaid",
     "sphinxcontrib-towncrier",
+    # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
+    # ? via sphinx
+    "urllib3",
 ]
 [tool.fawltydeps.custom_mapping]
 ruamel-yaml = ["ruamel"]
