--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -6,9 +6,13 @@ debugpy==1.8.1
 fawltydeps==0.15.0
 flit==3.9.0
 keyring==25.2.1
+pipdeptree==2.23.0
 pre-commit==3.7.1
 pyright==1.1.367
 ruff==0.4.8
 snakeviz==2.2.0
 sourcery==1.19.0
 towncrier==23.11.0
+# ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
+# ? via flit
+urllib3>=2.2.2
