--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -81,6 +81,8 @@ parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pip-requirements-parser==32.0.1
+pip==24.1
+pipdeptree==2.23.0
 pipx==1.6.0
 platformdirs==4.2.2
 pluggy==1.5.0
